updated layout so speaker info is above schedule (to be reversed for event date) added new speakerinfo and image

--- a/index.html
+++ b/index.html
@@ -87,84 +87,22 @@
 					<h3>18th February 2017</h3>
 				</header>
 
-		<!-- SCHEDULE -->
-				<section id="schedule">
-					<header>
-						<h3>Event Schedule</h3>
-					</header>
-					<div class="table-wrapper">
-						<table class="default">
-							<thead>
-								<tr>
-									<th>Time</th>
-									<th>Activity</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>09:30</td>
-									<td>Doors Open / Registration</td>
-								</tr>
-								<tr>
-									<td>10:00</td>
-									<td>Introduction to #WIT17</td>
-								</tr>
-								<tr>
-									<td>10:05</td>
-									<td>Talks Begin</td>
-								</tr>
-								<tr>
-									<td>11:20</td>
-									<td>Refreshment Break</td>
-								</tr>
-								<tr>
-									<td>11:30</td>
-									<td>Talks Resume</td>
-								</tr>
-								<tr>
-									<td>12:45</td>
-									<td>Lunch & Networking</td>
-								</tr>
-								<tr>
-									<td>13:45</td>
-									<td>Workshops (1st Session)</td>
-								</tr>
-								<tr>
-									<td>14:45</td>
-									<td>Refreshment Break</td>
-								</tr>
-								<tr>
-									<td>15:15</td>
-									<td>Workshops (2nd Session)</td>
-								</tr>
-								<tr>
-									<td>16:15</td>
-									<td>Closing Talk & Thanks</td>
-								</tr>
-								<tr>
-									<td>16:30</td>
-									<td>Cake Drop & Networking</td>
-								</tr>
-								<tr>
-									<td>17:30</td>
-									<td>Event Close</td>
-								</tr>
-							</tbody>
-							<tfoot>
-								<tr>
-									<td colspan="2"></td>
-								</tr>
-							</tfoot>
-						</table>
-					</div>
-				</section>
-				
-				<section id="speakers">
+		<!-- SPEAKERS -->		
+			<section id="speakers">
 					<header>
 						<h3>Speakers</h3>
 						<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry. We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
 					</header>
 					<ul>
+						<li>
+							<img src="images/charlie.jpg">
+							<div class="info">
+								<div class="name">Charlie Allen</div>
+								<div class="bio">
+									Charlie is a former administrator of nearly 10 years, who recently learned to code having never previously thought she could. Charlie now works for a small Rails agency in central London, and is also a coach and co-organiser of the London RailsGirls group. She is passionate about gender diversity in STEM.
+								</div>
+							</div>
+						</li>
 						<li>
 							<img src="images/JessR.jpg">
 							<div class="info">
@@ -192,16 +130,6 @@
 								</div>
 							</div>
 						</li>
-						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Charlie Allen</div>
-								<div class="bio">
-									Charlie is a former administrator of nearly 10 years, who only recently learned to code having never previously thought she could. Charlie now works for a small Rails agency in central London, and am also a coach and co-organiser with the London RailsGirls group. She is passionate about gender diversity in STEM.
-								</div>
-							</div>
-						</li>
-						<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
 								<div class="name">Alice Casey</div>
@@ -276,6 +204,79 @@
 						</li>-->
 					</ul>
 				</section>
+
+		<!-- SCHEDULE -->
+				<section id="schedule">
+					<header>
+						<h3>Event Schedule</h3>
+					</header>
+					<div class="table-wrapper">
+						<table class="default">
+							<thead>
+								<tr>
+									<th>Time</th>
+									<th>Activity</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>09:30</td>
+									<td>Doors Open / Registration</td>
+								</tr>
+								<tr>
+									<td>10:00</td>
+									<td>Introduction to #WIT17</td>
+								</tr>
+								<tr>
+									<td>10:05</td>
+									<td>Talks Begin</td>
+								</tr>
+								<tr>
+									<td>11:20</td>
+									<td>Refreshment Break</td>
+								</tr>
+								<tr>
+									<td>11:30</td>
+									<td>Talks Resume</td>
+								</tr>
+								<tr>
+									<td>12:45</td>
+									<td>Lunch & Networking</td>
+								</tr>
+								<tr>
+									<td>13:45</td>
+									<td>Workshops (1st Session)</td>
+								</tr>
+								<tr>
+									<td>14:45</td>
+									<td>Refreshment Break</td>
+								</tr>
+								<tr>
+									<td>15:15</td>
+									<td>Workshops (2nd Session)</td>
+								</tr>
+								<tr>
+									<td>16:15</td>
+									<td>Closing Talk & Thanks</td>
+								</tr>
+								<tr>
+									<td>16:30</td>
+									<td>Cake Drop & Networking</td>
+								</tr>
+								<tr>
+									<td>17:30</td>
+									<td>Event Close</td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td colspan="2"></td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+				</section>
+
 		</article>
 				
 
