updated new speaker info and facebook link as facebook ID changed

--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 					</header>
 					<ul>
 						<li>
+							<img src="images/kate.jpg">
+							<div class="info">
+								<div class="name">Dr Kate Devlin</div>
+								<div class="bio">
+									Dr Kate Devlin is a Senior Lecturer in the Department of Computing at Goldsmiths, University of London. Kate works in the fields of Human Computer Interaction and Artificial Intelligence, focusing on cognition, sex, gender and sexuality, and how these might be incorporated into cognitive systems such as sexual companion robots. Kate is a campaigner for gender equality and is involved in national initiatives to improve opportunities for women in tech. 
+								</div>
+							</div>
+						</li>
+						<li>
 							<img src="images/charlie.jpg">
 							<div class="info">
 								<div class="name">Charlie Allen</div>
@@ -138,15 +147,7 @@
 								</div>
 							</div>
 						</li>
-						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Kate Devlin</div>
-								<div class="bio">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
-								</div>
-							</div>
-						</li>
+					
 						<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
@@ -435,7 +436,7 @@
 	<section id="footer">
 		<ul class="icons">
 			<li><a href="http://twitter.com/inspirewit" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="http://facebook.com/witnotts" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+			<li><a href="http://facebook.com/inspirewit" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 		</ul>
 		<div class="copyright">
 			<ul class="menu">
