Updated new speaker Alice Casey - added section for panelists (commented out until panel is announced). added images for these plus all speakers to file.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 					</header>
 					<ul>
 						<li>
+							<img src="images/alice1.jpg">
+							<div class="info">
+								<div class="name">Alice Casey</div>
+								<div class="bio">
+									Alice helped to found the London branch of Code Liberation in 2016. She is currently studying Games Programming at Goldsmiths College and is always looking for new programming challenges. She has been embracing games since she could pick up a controller and continues to collect and play retro titles. Alice hopes to help make the world of games a more inclusive space for LGBT people, and in turn use it to cast light on issues faced in the community through interactive experiences and storytelling.
+								</div>
+							</div>
+						</li>
+						<li>
 							<img src="images/kate.jpg">
 							<div class="info">
 								<div class="name">Dr Kate Devlin</div>
@@ -131,7 +140,7 @@
 							</div>
 						</li>
 						<!--<li>
-							<img src="http://placehold.it/500/500">
+							<img src="images/Julia1.jpg">
 							<div class="info">
 								<div class="name">Julia Higginbottom</div>
 								<div class="bio">
@@ -139,62 +148,7 @@
 								</div>
 							</div>
 						</li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Alice Casey</div>
-								<div class="bio">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
-								</div>
-							</div>
-						</li>
-					
-						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Lizzie Lang</div>
-								<div class="bio">
-									Lizzie is a UC Berkeley graduate and Silicon Valley native who manages a sales team responsible for launching UberEATS in UK expansion cities. She started her career with the San Francisco-based tech company in operations and logistics - setting up the Uber rides business in several UK cities including Sheffield, Southampton, York and Nottingham. 
-								</div>
-							</div>
-						</li>
-						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Melinda Seckington</div>
-								<div class="bio">
-									Melinda is a developer at FutureLearn, a social learning platform, and leads the team’s employee evangelism. She loves attending BarCamps, Hackdays and other tech meet ups, and since 2009 has been organising them at Geeks of London. She also writes at MissGeeky, a blog about all things geeky and girly. When she’s not busy with events or blogging, you can find Melinda curled up on her couch with a good book or video game. 
-"
-								</div>
-							</div>
-						</li>
-						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Paula Clerkin</div>
-								<div class="bio">
-									Paula is a University of Nottingham Graduate Computer Scientist now working at the Defence Science Technology Lab. In 2014 Paula founded the Women in Tech Conference at The University of Nottingham - this very event! On top of this, just last year Paula was awarded the Vice Chancellor's award for her achievements. 
-								</div>
-							</div>
-						</li>
-						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Jess White</div>
-								<div class="bio">
-									Jessica is a Nottingham-based developer at Oakbrook Finance. As well as writing code, Jessica helps organise WIT Notts and would love to hear from potential speakers. Some say Jessica is a caffiene powered half hobbit, but she hasn't found any magical rings lately.
-								</div>
-							</div>
-						</li>
-						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Mergime Raci</div>
-								<div class="bio">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
-								</div>
-							</div>
-						</li>
-						<li>
+							<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
 								<div class="name">SPONSOR</div>
@@ -203,8 +157,63 @@
 								</div>
 							</div>
 						</li>-->
+						</ul>
+
+			<!-- PANEL 		
+				<section id="speakers">
+					<header>
+						<h3>The Women in Tech Panelists - Ask us anything</h3>
+						<p>This year at #WIT17 we have an exclusive Women in Tech Panel! </br>Join us for the opportunity to ask the women on the panel anything about their technology careers in this workshop event. These ladies will cover everything; overcoming barriers, applying for jobs, interviews and much more! </p>
+					</header>
+					<ul>
+
+						<li>
+							<img src="images/Lizzie1.png">
+							<div class="info">
+								<div class="name">Lizzie Lang</div>
+								<div class="bio">
+									Lizzie is a UC Berkeley graduate and Silicon Valley native who manages a sales team responsible for launching UberEATS in UK expansion cities. She started her career with the San Francisco-based tech company in operations and logistics - setting up the Uber rides business in several UK cities including Sheffield, Southampton, York and Nottingham. 
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="images/melinda.jpg">
+							<div class="info">
+								<div class="name">Melinda Seckington</div>
+								<div class="bio">
+									Melinda is a developer at FutureLearn, a social learning platform, and leads the team’s employee evangelism. She loves attending BarCamps, Hackdays and other tech meet ups, and since 2009 has been organising them at Geeks of London. She also writes at MissGeeky, a blog about all things geeky and girly. When she’s not busy with events or blogging, you can find Melinda curled up on her couch with a good book or video game. 
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="images/Paula3.jpg">
+							<div class="info">
+								<div class="name">Paula Clerkin</div>
+								<div class="bio">
+									Paula is a University of Nottingham Graduate Computer Scientist now working at the Defence Science Technology Lab. In 2014 Paula founded the Women in Tech Conference at The University of Nottingham - this very event! Last year Paula was awarded the Vice Chancellor's award for her fantastic achievements. 
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="images/JessW1.jpg">
+							<div class="info">
+								<div class="name">Jess White</div>
+								<div class="bio">
+									Jessica is a Nottingham-based developer. As well as writing code, Jessica helps organise WIT Notts and would love to hear from potential speakers. Some say Jessica is a caffiene powered half hobbit, but she hasn't found any magical rings lately.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="images/mergime1.jpg">
+							<div class="info">
+								<div class="name">Mergime Raci</div>
+								<div class="bio">
+									Mergime is a User Experience Designer at Nice Agency and one of the organisers of GeekGirl Meetup UK. As a former banker and having transitioned into both the Creative and Tech worlds, she relates highly to the journeys that some of you might decide to take. Empowering and inspiring other women (and occasionally the odd man!) is one of Mergime's biggest motivations. 
+								</div>
+							</div>
+						</li>
 					</ul>
-				</section>
+				</section>-->
 
 		<!-- SCHEDULE -->
 				<section id="schedule">
