updated speaker ection to include Julia and added panelist info

--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 					</header>
 					<ul>
 						<li>
+							<img src="images/Julia1.jpg">
+							<div class="info">
+								<div class="name">Julia Higginbottom</div>
+								<div class="bio">
+									Julia is the founder of creative agency Rebel Uncut, TechEd social enterprise Rebel Labs, and a sought after innovation consultant with more than 15 years experience transforming communities and organisations through digital disruption. Julia strongly believes in technology as a force for positive change in both the commercial and public sectors, an ethos that has seen her kickstart successful innovation projects for organisations including IBM, Parliament and Goodyear.
+								</div>
+							</div>
+						</li>
+						<li>
 							<img src="images/alice1.jpg">
 							<div class="info">
 								<div class="name">Alice Casey</div>
@@ -140,15 +149,6 @@
 							</div>
 						</li>
 						<!--<li>
-							<img src="images/Julia1.jpg">
-							<div class="info">
-								<div class="name">Julia Higginbottom</div>
-								<div class="bio">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
-								</div>
-							</div>
-						</li>
-							<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
 								<div class="name">SPONSOR</div>
@@ -159,7 +159,7 @@
 						</li>-->
 						</ul>
 
-			<!-- PANEL 		
+			<!-- PANEL	
 				<section id="speakers">
 					<header>
 						<h3>The Women in Tech Panelists - Ask us anything</h3>
@@ -210,10 +210,9 @@
 								<div class="bio">
 									Mergime is a User Experience Designer at Nice Agency and one of the organisers of GeekGirl Meetup UK. As a former banker and having transitioned into both the Creative and Tech worlds, she relates highly to the journeys that some of you might decide to take. Empowering and inspiring other women (and occasionally the odd man!) is one of Mergime's biggest motivations. 
 								</div>
-							</div>
-						</li>
+							</div> -->
 					</ul>
-				</section>-->
+				</section>
 
 		<!-- SCHEDULE -->
 				<section id="schedule">
