--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 						<input type="text" name="_gotcha" style="display:none" />
 						<input type="hidden" name="_next" value="http://inspirewit.com#thanks" />
 						<div class="12u$">
-							<ul class="actions">
+							<ul class="actions"> 
 								<li><input type="submit" value="Send Message" /></li>
 							</ul>
 						</div>
@@ -459,6 +459,7 @@
 	<script src="assets/js/jquery.poptrox.min.js"></script>
 	<script src="assets/js/skel.min.js"></script>
 	<script src="assets/js/util.js"></script>
+	<script src="assets/js/matchheight.js"></script>
 	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 	<script src="assets/js/main.js"></script>
 </body>
