--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
 		<!-- SPEAKERS -->		
 			<section id="speakers">
 					<header>
-						<h3>Speakers</h3>
 						<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry. We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
 					</header>
 					<ul>
@@ -159,10 +158,9 @@
 						</li>-->
 						</ul>
 
-			<!-- PANEL	
-				<section id="speakers">
+				<section class="panel" id="panel">
 					<header>
-						<h3>The Women in Tech Panelists - Ask us anything</h3>
+						<h3>The Women in Tech Panelists</h3>
 						<p>This year at #WIT17 we have an exclusive Women in Tech Panel! </br>Join us for the opportunity to ask the women on the panel anything about their technology careers in this workshop event. These ladies will cover everything; overcoming barriers, applying for jobs, interviews and much more! </p>
 					</header>
 					<ul>
@@ -171,6 +169,7 @@
 							<img src="images/Lizzie1.png">
 							<div class="info">
 								<div class="name">Lizzie Lang</div>
+								<div class="company">UBER</div>
 								<div class="bio">
 									Lizzie is a UC Berkeley graduate and Silicon Valley native who manages a sales team responsible for launching UberEATS in UK expansion cities. She started her career with the San Francisco-based tech company in operations and logistics - setting up the Uber rides business in several UK cities including Sheffield, Southampton, York and Nottingham. 
 								</div>
@@ -180,6 +179,7 @@
 							<img src="images/melinda.jpg">
 							<div class="info">
 								<div class="name">Melinda Seckington</div>
+								<div class="company">FutureLearn</div>
 								<div class="bio">
 									Melinda is a developer at FutureLearn, a social learning platform, and leads the team’s employee evangelism. She loves attending BarCamps, Hackdays and other tech meet ups, and since 2009 has been organising them at Geeks of London. She also writes at MissGeeky, a blog about all things geeky and girly. When she’s not busy with events or blogging, you can find Melinda curled up on her couch with a good book or video game. 
 								</div>
@@ -189,6 +189,7 @@
 							<img src="images/Paula3.jpg">
 							<div class="info">
 								<div class="name">Paula Clerkin</div>
+								<div class="company">DSTL</div>
 								<div class="bio">
 									Paula is a University of Nottingham Graduate Computer Scientist now working at the Defence Science Technology Lab. In 2014 Paula founded the Women in Tech Conference at The University of Nottingham - this very event! Last year Paula was awarded the Vice Chancellor's award for her fantastic achievements. 
 								</div>
@@ -198,6 +199,7 @@
 							<img src="images/JessW1.jpg">
 							<div class="info">
 								<div class="name">Jess White</div>
+								<div class="company">WiT Notts</div>
 								<div class="bio">
 									Jessica is a Nottingham-based developer. As well as writing code, Jessica helps organise WIT Notts and would love to hear from potential speakers. Some say Jessica is a caffiene powered half hobbit, but she hasn't found any magical rings lately.
 								</div>
@@ -207,10 +209,11 @@
 							<img src="images/mergime1.jpg">
 							<div class="info">
 								<div class="name">Mergime Raci</div>
+								<div class="company">Nice Agency</div>
 								<div class="bio">
 									Mergime is a User Experience Designer at Nice Agency and one of the organisers of GeekGirl Meetup UK. As a former banker and having transitioned into both the Creative and Tech worlds, she relates highly to the journeys that some of you might decide to take. Empowering and inspiring other women (and occasionally the odd man!) is one of Mergime's biggest motivations. 
 								</div>
-							</div> -->
+							</div>
 					</ul>
 				</section>
 
