Fixed headers on mobile

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							<div class="info">
 								<div class="name">Alice Casey</div>
 								<div class="bio">
-									Alice helped to found the London branch of Code Liberation in 2016. She is currently studying Games Programming at Goldsmiths College and is always looking for new programming challenges. She has been embracing games since she could pick up a controller and continues to collect and play retro titles. Alice hopes to help make the world of games a more inclusive space for LGBT people, and in turn use it to cast light on issues faced in the community through interactive experiences and storytelling.
+									Alice helped to found the London branch of Code Liberation in 2016. She is currently studying Games Programming at Goldsmiths, University of London, and is always looking for new programming challenges. She has been embracing games since she could pick up a controller and continues to collect and play retro titles. Alice hopes to help make the world of games a more inclusive space for LGBT people, and in turn use it to cast light on issues faced in the community through interactive experiences and storytelling.
 								</div>
 							</div>
 						</li>
