commented out section on panel to announce tomorrow

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 							</div>
 						</li>-->
 						</ul>
-
-				<section class="panel" id="panel">
+				<!--Panel-->
+				<!--<section class="panel" id="panel">
 					<header>
 						<h3>The Women in Tech Panelists</h3>
 						<p>This year at #WIT17 we have an exclusive Women in Tech Panel! </br>Join us for the opportunity to ask the women on the panel anything about their technology careers in this workshop event. These ladies will cover everything; overcoming barriers, applying for jobs, interviews and much more! </p>
@@ -215,7 +215,7 @@
 								</div>
 							</div>
 					</ul>
-				</section>
+				</section>-->
 
 		<!-- SCHEDULE -->
 				<section id="schedule">
