updated typo in index file for Paula's image

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 							</div>
 						</li>
 						<li>
-							<img src="images/Paula3.jpg">
+							<img src="images/paula3.jpg">
 							<div class="info">
 								<div class="name">Paula Clerkin</div>
 								<div class="company">DSTL</div>
