updated sponsors to include Capital One and Thomson Reuters

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 						<div class="3u 12u(mobile)"><img src="images/thumbs/esendex.svg" class="image fit" title="Esendex" /></div>
 						<div class="3u 12u(mobile)"><img src="images/thumbs/nationwide.svg" class="image fit" title="Nationwide" /></div>
 					</div>
-				<!--	<div class="row 0%">
-						<div class="3u 12u(mobile)"><img src="images/thumbs/mlh.svg" class="image fit" title="Major League Hacking" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/intsft.svg" class="image fit" title="Intel Software" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/dstl.svg" class="image fit" title="Defence Science and Technology Laboratory" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/bcsw.svg" class="image fit" title="BCS Women"/></div>
-					</div>-->
+				<div class="row 0%">
+						<div class="3u 12u(mobile)"><img src="images/thumbs/C1.svg" class="image fit" title="Capital One" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/TR.svg" class="image fit" title="Thompson Reuters" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/uon.svg" class="image fit" title="The University of Nottingham" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/bcsw.svg" class="image fit" title="BCS Women" /></div>
+					</div>
 				</div>
 			</article>
 		
