Update event location to Jubilee Conference Centre from Business School South

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 			<ul>
 				<li>
 					<b>Where does the Women In Technology event take place?</b>
-					<p>It will be held at the University of Nottingham's Jubilee Campus. It will be based in the Business School South building.</p>
+					<p>It will be held at the University of Nottingham's Jubilee Campus. It will be based in the Jubilee Conference Centre building.</p>
 				</li>
 
 				<li>
